[gd_scene load_steps=11 format=3 uid="uid://cf52hgy5kuug3"]

[ext_resource type="Texture2D" uid="uid://301yjw1hohjw" path="res://assets/door_2.png" id="1_3klei"]
[ext_resource type="Script" uid="uid://d0xfopkgq5l0v" path="res://scripts/door.gd" id="1_h1ryw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h1ryw"]
atlas = ExtResource("1_3klei")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6ytg"]
atlas = ExtResource("1_3klei")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk5q8"]
atlas = ExtResource("1_3klei")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcwvu"]
atlas = ExtResource("1_3klei")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1sl4"]
atlas = ExtResource("1_3klei")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vfis"]
atlas = ExtResource("1_3klei")
region = Rect2(128, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_xguhv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1ryw")
}],
"loop": false,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6ytg")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1ryw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk5q8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcwvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1sl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vfis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6ytg")
}],
"loop": false,
"name": &"opening",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqacd"]
size = Vector2(28, 40)

[node name="Door" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_h1ryw")

[node name="DoorSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -12)
sprite_frames = SubResource("SpriteFrames_xguhv")
animation = &"close"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_yqacd")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -17.0
text = "Abrir"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
